--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ media
 secret.json
 data
 .angular/
+frontend/node_modules/
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
